canvas is now populated on extension click, ocr runs on button click

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <script src="secrets.js"></script>
   <script src="main.js"></script>
 </head>
-<button id="screenshotButton">select screenshot</button>
+<button id="screenshotButton">run ocr</button>
 
 <body>
   <div id="text">text here</div>
