--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,9 @@
 
 <body>
   <div id="text">text here</div>
+  <canvas id="canvas-cropped"></canvas>
   <canvas id="canvas"></canvas>
+
   <div id="image"></div>  
 </body>
 
