ocr now runs automatically

--- a/popup.html
+++ b/popup.html
@@ -8,10 +8,14 @@
   <script src="secrets.js"></script>
   <script src="main.js"></script>
 </head>
-<button id="screenshotButton">run ocr</button>
 
 <body>
-  <div id="text">text here</div>
+  <div id="text">
+    - click on the apple to open the extension. it should automatically screenshot your tab<br />
+    - click twice on the image to crop it. First click should be upper left of rectangle, second click should be bottom right<br />
+    - cropped image should display<br />
+    - ocr should run automatically<br />
+  </div>
   <canvas id="canvas-cropped"></canvas>
   <canvas id="canvas"></canvas>
 
