popup now switches to code editor after OCR

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
   <title>screenshot extension</title>
   <script src="axios.min.js"></script>
   <script src="codemirror.min.js"></script>
+  <link rel="stylesheet" href="popup.css">
   <link rel="stylesheet" href="codemirror.min.css">
   <link rel="stylesheet" href="monokai.min.css">
 
@@ -18,12 +19,6 @@
 <body>
   <div id="text-editor">
 
-  </div>
-  <div id="text">
-    - click on the apple to open the extension. it should automatically screenshot your tab<br />
-    - click twice on the image to crop it. First click should be upper left of rectangle, second click should be bottom right<br />
-    - cropped image should display<br />
-    - ocr should run automatically<br />
   </div>
   <canvas id="canvas-cropped"></canvas>
   <canvas id="canvas"></canvas>
