--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="text-editor">
-
+    <button id="runCode">Run code</button>    
   </div>
   <canvas id="canvas-cropped"></canvas>
   <canvas id="canvas"></canvas>
